--- a/styles/Offer.module.css
+++ b/styles/Offer.module.css
@@ -22,8 +22,8 @@
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: #C91BA3;
+  border-color: #C91BA3;
 }
 
 .card h3 {
@@ -46,4 +46,82 @@
     width: 100%;
     flex-direction: column;
   }
+}
+
+.page {
+  display: flex;
+  flex-direction: column;
+  margin: 2%;
+}
+
+.container {
+  display: flex;
+  border: 2px solid #C91BA3;
+  border-radius: 10px;
+  padding: 2%;
+}
+
+.container section {
+  max-width: 50%;
+  margin: 2%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+@media (max-width: 600px) {
+  .container {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .container section{
+      max-width: 100%;
+  }
+}
+
+.tag {
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 200;
+  font-family: Roboto;
+  margin: 1%;
+  justify-content: flex-end;
+}
+
+.tag tr {
+  background-color: #C91BA3;
+  border-radius: 5px;
+  color: #eee;
+  padding: 5px 10px;
+  margin: 5px;
+  text-align: center;
+}
+
+.foot{
+  display: flex;
+  justify-content: flex-end;
+}
+
+.foot button {
+  display:inline-block;
+  padding:0.35em 1.2em;
+  border:1px solid #C91BA3;
+  margin:0 0.3em 0.3em 0;
+  border-radius:5px;
+  box-sizing: border-box;
+  text-decoration:none;
+  font-family:'Roboto';
+  font-weight:300;
+  color:#fff;
+  text-align:center;
+  transition: all 0.2s;
+  background-color: #C91BA3;
+}
+
+.foot button:hover {
+  color:#fff;
+  background-color:#333;
 }
